--- a/app/views/president/evaluaciones/planificadas/index.html
+++ b/app/views/president/evaluaciones/planificadas/index.html
@@ -24,7 +24,7 @@
 			<div class="col-md-12">
 				<nav aria-label="breadcrumb" style="margin-top: 1%">
 					<ol class="breadcrumb">
-					    <li class="breadcrumb-item" aria-current="page">Home</li>
+					    <li class="breadcrumb-item" aria-current="page"><a href="/president">Home</a></li>
 					    <li class="breadcrumb-item active" aria-current="page">Eval. Planificadas</li>
 					</ol>
 				</nav>
@@ -83,7 +83,7 @@
 											<th scope="col">Nombre de Eval</th>
 											<th scope="col">Nucleo</th>
 									      	<th scope="col">Unidad</th>
-									      	<th scope="col">Acción</th>
+									      	<th scope="col">Status</th>
 									    </tr>
 									</thead>
 								  	<tbody>
