mejorando vista para el remplazo de coordinadores

--- a/app/views/president/cambiar/index.html
+++ b/app/views/president/cambiar/index.html
@@ -81,35 +81,36 @@
 										<div class="article border-bottom">
 											<h3>Coord. de Planificación</h3>
 										</div>
-										<div class="row" style="margin-top: 10px">
-											<div class="col-sm-4 col-md-5 col-lg-4 text-center">
-												<img src="/images/img/user.png" alt="" class="img-thumbnail">
+										<br>
+										<div class="article border-bottom">
+											<div class="text-center">
+												<img src="/images/img/user.png" class="rounded-circle img-fluid" alt="Cinque Terre" style="width: 50%">
 											</div>
-											<div class="col-sm-8 col-md-7 col-lg-8">
-												<fieldset disabled>
-													<div class="form-group row">
-													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
-													    <div class="col-sm-9">
-													    	<input type="text" class="form-control form-control-sm" v-model="coord.nombre">
-													    </div>
-													</div>
-
-													<div class="form-group row">
-													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
-													    <div class="col-sm-9">
-													    	<input type="text" class="form-control form-control-sm" v-model="coord.apellido">
-													    </div>
-													</div>
-
-													<div class="form-group row">
-													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
-													    <div class="col-sm-9">
-													    	<input type="text" class="form-control form-control-sm" v-model="coord.cedula">
-													    </div>
-													</div>
-												</fieldset>
-											</div>
+											<br>
 										</div>
+										<br>
+										<fieldset disabled>
+											<div class="form-group row">
+												<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
+												<div class="col-sm-9">
+													<input type="text" class="form-control form-control-sm" v-model="coord.nombre">
+												</div>
+											</div>
+
+											<div class="form-group row">
+												<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
+												<div class="col-sm-9">
+												   	<input type="text" class="form-control form-control-sm" v-model="coord.apellido">
+												</div>
+											</div>
+
+											<div class="form-group row">
+											    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
+											    <div class="col-sm-9">
+											    	<input type="text" class="form-control form-control-sm" v-model="coord.cedula">
+											    </div>
+											</div>
+										</fieldset>
 									</div>
 								</div>
 							</div>
@@ -117,42 +118,44 @@
 							<div class="col-sm-12 col-md-12 col-lg-2 text-center">
 								<p style="font-size: 50pt"><span class="glyphicon glyphicon-log-in" ></span><i class="fa fa-exchange"></i></p>
 							</div>
-
+								
 							<div class="col-sm-12 col-md-12 col-lg-5">
 								<div class="card">
 									<div class="card-body">
 										<div class="article border-bottom">
-											<h3>Reemplazo</h3>
+											<h3>Candidato</h3>
 										</div>
-										<div class="row" style="margin-top: 10px">
-											<div class="col-sm-4 col-md-5 col-lg-4 text-center">
-												<img src="/images/img/user.png" alt="" class="img-thumbnail">
+										<br>
+										<div class="article border-bottom">
+											<div class="text-center">
+												<img src="/images/img/user.png" class="rounded-circle img-fluid" alt="Cinque Terre" style="width: 50%">
 											</div>
-											<div class="col-sm-8 col-md-7 col-lg-8">
-												<fieldset disabled>
-													<div class="form-group row">
-													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
-													    <div class="col-sm-9">
-													    	<input type="text" class="form-control form-control-sm" v-model="usuario.nombre">
-													    </div>
-													</div>
-
-													<div class="form-group row">
-													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
-													    <div class="col-sm-9">
-													    	<input type="text" class="form-control form-control-sm" v-model="usuario.apellido">
-													    </div>
-													</div>
-
-													<div class="form-group row">
-													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
-													    <div class="col-sm-9">
-													    	<input type="text" class="form-control form-control-sm" v-model="usuario.cedula">
-													    </div>
-													</div>
-												</fieldset>
-											</div>
+											<br>
 										</div>
+										<br>
+										<fieldset disabled>
+											<div class="form-group row">
+												<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
+												<div class="col-sm-9">
+													<input type="text" class="form-control form-control-sm" v-model="usuario.nombre">
+												</div>
+											</div>
+
+											<div class="form-group row">
+												<label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
+												<div class="col-sm-9">
+												   	<input type="text" class="form-control form-control-sm" v-model="usuario.apellido">
+												</div>
+											</div>
+
+											<div class="form-group row">
+											    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
+											    <div class="col-sm-9">
+											    	<input type="text" class="form-control form-control-sm" v-model="usuario.cedula">
+											    </div>
+											</div>
+										</fieldset>
+										
 									</div>
 								</div>
 							</div>
